# OpenMalLab

./: .dockerignore  .env.example  .gitignore  ASK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: RUNBOOK.md  compose.ai.yaml  compose.cloud.yaml  compose.yaml
deploy/certs/: README.md
deploy/proof/: boundary-proof.sh  detonate-proof.sh  die-proof.sh  e2e-live.sh  e2e.sh
deploy/security/: cargo-audit-allow.txt  govulncheck-allow.txt  rust-audit.sh  vulncheck.sh
docs/: AI-PLANE-INTEGRATION.md  ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  BOUNDARY-PROOF.md  COMPONENTS.md  DECISION-LOG.md  DESIGN-AUDIT.md  DETONATE-HANDOFF.md  DIE-HANDOFF.md  DYNAMIC-ANALYSIS-V1.md  FEATURE-SPEC.md  HANDOFF-NEEDS.md  LAPTOP-TEST-GUIDE.md  LICENSING-BRIEF.md  LIVE-GUIDE.md  M0-FIRST-COMMIT.md  PHASE1-TECHNICAL-DESIGN.md  ROADMAP.md  THREAT-MODEL.md
docs/diagrams/: README.md  agentic-plane.dot  pipeline.dot  render.sh
docs/diagrams/src/: 01-system-planes.dot  02-trust-boundaries.dot  03-detonation-deadend.dot  04-result-pump-pipeline.dot  05-dataflow-lifecycle.dot  06-dag-aggregation.dot  07-ai-quarantine.dot  08-deployment-tiers.dot  09-licensing-isolation.dot  10-phase1-components.dot  11-supply-chain-offline.dot
internal/aiplane/: calibration.go  calibration_test.go  contract.go  contract_test.go  eval.go  eval_test.go  facade.go  facade_test.go  gate.go  gate_test.go  graduation.go  graduation_test.go  hardening_test.go  httpprovider.go  ledger.go  ledger_test.go  provider.go  provider_test.go  realmodel_test.go
internal/aiplane/testdata/: live_proposal_gptoss120b.json
internal/export/: export.go  export_test.go  iocs.go  misp.go  stix.go
internal/knowledge/: graph.go  graph_test.go  persist.go  persist_graph.go  persist_graph_test.go  persist_test.go  registry.go  registry_test.go  seed.go  seed_test.go  semantic.go  semantic_test.go  similarity.go  similarity_test.go
internal/knowledge/seeddata/: starter.json
internal/pipeline/: types.go  types_test.go
proto/: analyze.proto
services/mal-agents/: Dockerfile  pyproject.toml
services/mal-agents/malagents/: __init__.py  app.py  egress.py  learning.py  models.py  provider.py  tracing.py
services/mal-agents/malagents/agents/: __init__.py  _prompts.py  analyst.py  capability_reasoner.py  correlator.py  escalation.py  factory.py  family_hypothesizer.py  ioc_extractor.py  novelty_detector.py  report_writer.py  roster.py  router.py  schemas.py  verifier.py
services/mal-agents/tests/: test_adversarial.py  test_analyst.py  test_app.py  test_capability_reasoner.py  test_correlator.py  test_egress.py  test_escalation.py  test_family_hypothesizer.py  test_ioc_extractor.py  test_learning.py  test_limits.py  test_models.py  test_novelty_detector.py  test_prompts.py  test_provider.py  test_report_writer.py  test_roster.py  test_router.py  test_schemas.py  test_tracing.py  test_verifier.py
services/mal-broker/: Dockerfile  main.go  validate.go  validate_test.go
services/mal-capa/: Dockerfile  wrapper.py
services/mal-detonate/: Dockerfile  wrapper.py
services/mal-extract/: Cargo.toml  Dockerfile
services/mal-extract/src/: main.rs
services/mal-floss/: Dockerfile  wrapper.py
services/mal-gateway/: Dockerfile  main.go
services/mal-ident/: Cargo.toml  Dockerfile
services/mal-ident/src/: main.rs
services/mal-orchestrator/: Dockerfile  activity.go  agentgraph.go  agentgraph_live_test.go  agentgraph_test.go  crumb_test.go  die_test.go  enrichment.go  enrichment_test.go  hitl.go  hitl_test.go  ingest_test.go  jail.go  jail_test.go  learn.go  learn_test.go  main.go  mapreport_test.go  workflow.go  workflow_test.go
services/mal-static-die/: Dockerfile  wrapper.py
services/mal-static-yara/: Cargo.toml  Dockerfile
services/mal-static-yara/rules/: README.md
services/mal-static-yara/rules/community/: .gitkeep
services/mal-static-yara/rules/first-party/: eicar.yar  offensive_tools.yar  packers.yar  scripts.yar  webshells.yar
services/mal-static-yara/src/: main.rs
services/mal-web/: Dockerfile  main.go
services/mal-web/web/: index.html
