[project]
name = "malagents"
version = "0.1.0"
description = "OpenMalLab AI-analyst plane: a jailed, contained Pydantic-AI agent roster"
requires-python = ">=3.11"

# lean + auditable by design (mirrors the Go plane's tiny-dependency posture):
# pydantic-ai-slim is the minimal pydantic-ai without the heavy optional trees,
# with only the openai-compatible client extra (vLLM/Ollama speak that API).
# pinned to the tested 2.x major: an unbounded floor let it drift across a major
# version (which renamed OpenAIModel), silently breaking the cloud model path that
# only the live run exercises. keep the upper bound until a newer major is tested.
dependencies = [
    "pydantic>=2.7",
    "pydantic-ai-slim[openai]>=2.0,<3.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["malagents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
